Refactor feedback module to normalized 3-table design with anonymous ratings